// Copyright 2023 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.duchy;

option java_package = "org.wfanet.measurement.internal.duchy";
option java_multiple_files = true;

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;

  /** ContinuationToken is invalid. */
  CONTINUATION_TOKEN_INVALID = 1;

  /** ContinuationToken is malformed. */
  CONTINUATION_TOKEN_MALFORMED = 2;

  /** Computation could not be found. */
  COMPUTATION_NOT_FOUND = 3;

  /** ComputationDetails could not be found. */
  COMPUTATION_DETAILS_NOT_FOUND = 4;

  /** Computation initial stage is invalid. */
  COMPUTATION_INITIAL_STAGE_INVALID = 5;

  /** Computation with the same global ID already exists. */
  COMPUTATION_ALREADY_EXISTS = 6;

  /** The version from the request ComputationToken does not match the persisted
   * value. */
  COMPUTATION_TOKEN_VERSION_MISMATCH = 7;
}
